--- a/flask image editor/templates/about.html
+++ b/flask image editor/templates/about.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>About</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
 </head>
 
@@ -12,11 +12,10 @@
 
     <div class="navbar">
         <a href="/">Home</a>
-        <a href="/about">About</a>
     </div>
 
-    <h1>Welcome to the Home Page</h1>
-    <p>This is the content of your home page.</p>
+    <h1>Welcome to the About Page</h1>
+    <p>This is the content of your About page.</p>
 
 </body>
 
