fixed a few errors

--- a/flask-login-auth/website/templates/login.html
+++ b/flask-login-auth/website/templates/login.html
@@ -24,5 +24,6 @@
       </div>
       <br />
       <button type="submit" class="btn btn-primary">Login</button>
+      <button type="button" class = "btn btn-primary" onclick="window.location.href='/sign-up'">Sign Up</button>
     </form>
     {% endblock %}
