--- a/flask-login-auth/website/templates/base.html
+++ b/flask-login-auth/website/templates/base.html
@@ -36,7 +36,7 @@
           {% else %}
           <a class="nav-item nav-link" id="login" href="/login">Login</a>
           <a class="nav-item nav-link" id="signUp" href="/sign-up">Sign Up</a>
-          <a class="nav-item nav-link" id="login" href="/adminlogin">Administrator</a>
+          <a class="nav-item nav-link" id="login" href="/admin/login">Administrator</a>
           {% endif %}
         </div>
       </div>
